# coeffnet

./: .gitattributes  .pre-commit-config.yaml  README.md  data.py  dataset.py  environment.yaml  environment.yml  model.py  pyproject.toml  requirements-docs.txt  requirements-plots.txt  requirements-test.txt  requirements.txt  test_irrep.ipynb
datagen/: README.md  analyse_input.ipynb  calculate_sn2_quantities.py  generate_endstates_from_ts.py  prepare_input_interpolate_sn2.py  prepare_input_rotated_sn2.py  prepare_ml_input_interpolate_sn2.py
minimal_basis/: cleanup.sh  data.py  dataset.py  model.py  plot_params.py  plot_training_curves.py  submit_lawrencium.sh  submit_perlmutter.sh
tests/: conftest.py  generate_json_test_files.py  get_angle_info.py  test_charges.py  test_coeffmatrix.py  test_dataset.py  test_hamiltonian.py  test_inner_interpolate.py  test_model.py  test_nbo_charges.py  test_predata.py  test_predata_qchem.py  test_reaction_dataset.py  test_reactions.py  test_rotations.py  test_transforms.py
training/: analyse_best_models.ipynb  analyse_coeffmatrix_class.ipynb  analyse_convolution.ipynb  analyse_data_matrix.ipynb  analyse_dataset.ipynb  analyse_dataset.py  analyse_diffclassifier_model.py  analyse_gaussian_type_orbitals.ipynb  analyse_hamiltonian_data.py  analyse_hamiltonian_dataset.ipynb  analyse_hamiltonian_dataset.py  analyse_hyperparameters.py  analyse_interp_minimal_basis.py  analyse_interp_sn2_dataset.ipynb  analyse_matrices.ipynb  analyse_model.ipynb  analyse_reaction_eigenvalues.ipynb  analyse_rotated_forces.ipynb  analyse_rotated_hamiltonian.ipynb  analyse_rotated_sn2_database.ipynb  analysis_utils.py  baseline.py  check_pretrain_interpolate_model.py  cleanup.sh  cleanup_datadir.sh  cli_functions.py  compare_models.py  create_input_minimal_basis_model.py  dataset_activate_barrier_model.py  dataset_charge_model.py  dataset_hamiltonian_model.py  figure1.py  figure1_pyridene.py  figure2.py  figure4.py  figure5.py  figure6.py  figure7.py  figure7_datagen.py  figure8.py  (+35 more)
(+179 files in other folders)
