[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal_basis"
version = "0.0.1"
authors = [
  { name="Sudarshan Vijay", email="svijay@lbl.gov" },
]
description = "Predict TS barriers using ML."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]