[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal_basis"
version = "0.1.0"
authors = [
  { name="Sudarshan Vijay", email="svijay@lbl.gov" },
]
description = "Equivariant network to predict transition state quantities through a minimal basis representation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error", "ignore::UserWarning"]
log_cli_level = "warning"
testpaths = ["tests"]